--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,13 @@
     "version": "1.0.0",
     "manifest_version": 2,
     "icons": {
-	    "128": "icon.png"
+	    "256": "icon.png"
     },
     "background": {
         "scripts": ["background.js"]
     },
     "permissions": [
-	    "*//www.youtube.com/*",
+	    "*://www.youtube.com/*",
 	    "activeTab",
 	    "webNavigation"
     ],
