--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "get-youtube-feed",
+    "name": "get-youtube-feeds",
     "description": "Allows easy access to Youtube Feeds from users, channels and playlists",
     "version": "1.0.0",
     "manifest_version": 2,
