--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,7 @@ jobs:
     - uses: actions/setup-node@v1
       with:
         node-version: '12'
-    - run: pwd && ls 
-    - run: build.sh
+    - run: ./build.sh
     - uses: actions/upload-artifact@v2
       with:
         path: ./*.zip 
