--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,28 @@
 {
-	"background": { "scripts": ["background.js"] },
-	"description": "Easy access to youtube user,channel and playlist feeds",
-	"icons": { "256": "icon.png"},
-	"manifest_version": 2,
-	"name": "get-youtube-feeds",
-	"page_action": { "browser_style": true,	"default_icon": "icon.png", "default_title": "open feed", "show_matches": [ "https://www.youtube.com/user/*", "https://www.youtube.com/channel/*", "https://www.youtube.com/*&list=*", "https://www.youtube.com/*?list=*" ] },
-	"permissions": [ "activeTab" ],
-	"version": "1.0.6"
+  "background": {
+    "scripts": [
+      "background.js"
+    ]
+  },
+  "description": "easy access to youtube user,channel and playlist feeds",
+  "icons": {
+    "256": "icon.png"
+  },
+  "manifest_version": 2,
+  "name": "get-youtube-feeds",
+  "page_action": {
+    "browser_style": true,
+    "default_icon": "icon.png",
+    "default_title": "open feed",
+    "show_matches": [
+      "https://www.youtube.com/user/*",
+      "https://www.youtube.com/channel/*",
+      "https://www.youtube.com/*&list=*",
+      "https://www.youtube.com/*?list=*"
+    ]
+  },
+  "permissions": [
+    "activeTab"
+  ],
+  "version": "1.0.6"
 }
-
